<resources>
    <string name="app_name">Airplay Demo</string>
    <string name="airplay_status_stopped">未启动</string>
    <string name="airplay_status_starting">正在启动 AirPlay 接收服务…</string>
    <string name="airplay_status_waiting">等待 AirPlay 音频连接</string>
    <string name="airplay_status_playing">正在接收并播放 AirPlay 音频</string>
    <string name="airplay_status_stopping">正在停止 AirPlay 接收服务…</string>
    <string name="airplay_status_error">启动失败</string>
    <string name="airplay_start">启动接收</string>
    <string name="airplay_stop">停止接收</string>
    <string name="airplay_unknown_title">等待歌曲信息</string>
    <string name="airplay_unknown_artist">未知歌手</string>
    <string name="airplay_unknown_album">未知专辑</string>
    <string name="airplay_waiting_for_audio">等待 AirPlay 音频</string>
    <string name="airplay_no_duration">--:--</string>
    <string name="airplay_cover_content_description">专辑封面</string>
    <string name="airplay_format_unknown">音频格式：等待连接</string>
    <string name="airplay_format">音频格式：%1$d-bit / %2$d 声道 / %3$d Hz</string>
    <string name="airplay_position_zero">0:00</string>
</resources>
